--- a/Logarithme et exponentielle.tex
+++ b/Logarithme et exponentielle.tex
@@ -23,7 +23,7 @@
 	\end{itemize}
 
 \section{exponentielle}
-\emph{exp} est l'application réciproque de \emph{Log}
+\emph{exp} est l'application r\'{e}ciproque de \emph{Log}
 	\begin{itemize}
 	\item $ e^{x+y} = e^xe^y $
 	\item $ e^0 = 1 $
