--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -28,15 +28,44 @@
 	$\sinh^2 a = \frac{\cosh 2a - 1}{2}$
 \end{itemize}
 
-\section{Fonctions trigonom\'{e}trie}
+\section{Fonctions cosinus, sinus, tangente}
 \begin{itemize}
-	\item \begin{tabular}{l|c|c|c|c|c|c|c|c|c}
+	\item valeurs remarquables:\\
+	\begin{tabular}{l|c|c|c|c|c|c|c|c|c}
 	t & 0 & $\frac{\Pi}{6}$ & $\frac{\Pi}{4}$ & $\frac{\Pi}{3}$ & $\frac{\Pi}{2}$ & $\frac{2\Pi}{3}$ & $\frac{3\Pi}{4}$ & $\frac{5\Pi}{6}$ & $\Pi$ \\
 	\hline
 	$\cos t$ & 1 & $\frac{\sqrt{3}}{2}$ & $\frac{\sqrt{2}}{2}$ & $\frac{1}{2}$ & 0 & $-\frac{1}{2}$ & $-\frac{\sqrt{2}}{2}$ & $-\frac{\sqrt{3}}{2}$ & -1 \\
 	$\sin t$ & 0 & $\frac{1}{2}$ & $\frac{\sqrt{2}}{2}$ & $\frac{\sqrt{3}}{2}$ & 1 & $\frac{\sqrt{3}}{2}$ & $\frac{\sqrt{2}}{2}$ & $\frac{1}{2}$ & 0 \\
-
 	\end{tabular}
+
+	\item Formules: \\
+	$\cos (a+b) = \cos a\cos b - \sin a\sin b$ \\
+	$\cos (a-b) = \cos a\cos b + \sin a\sin b$ \\
+	$\sin (a+b) = \sin a\cos b + \sin b\cos a$ \\
+	$\sin (a-b) = \sin a\cos b - \sin b\cos a$ \\
+	$\cos^2 a = \frac{1}{1 + \tan^2a}$ \\
+	$\cos^2 a = \frac{1 + \cos 2a}{2}$ \\
+	$\sin^2 a = \frac{1 - \cos 2a}{2}$ \\
+	\newline
+	$\cos p + \cos q = 2\cos\frac{p+q}{2}\cos\frac{p-q}{2}$ \\
+	$\cos p - \cos q = -2\sin\frac{p+q}{2}\sin\frac{p-q}{2}$ \\
+	$\sin p + \sin q = 2\sin\frac{p+q}{2}\cos\frac{p-q}{2}$ \\
+	$\sin p - \sin q = 2\sin\frac{p-q}{2}\cos\frac{p+q}{2}$ \\
+
+	\item Tangente: \\
+	\begin{itemize}
+		\item Valeurs remarquables: \\
+		\begin{tabular}{l|c|c|c|c}
+		t        & 0 & $\frac{\Pi}{6}$      & $\frac{\Pi}{4}$ & $\frac{\Pi}{3}$ \\
+		\hline
+		$\tan t$ & 0 & $\frac{1}{\sqrt{3}}$ & 1               & $\sqrt{3}$ \\
+		\end{tabular}
+
+		\item Formules: \\
+		$\tan$'$ t = \frac{1}{\cos^2 t} = 1 + \tan^2 t$ \\
+		$\tan (a+b) = \frac{\tan a + \tan b}{1 - \tan a\tan b}$ \\
+		$\tan (a-b) = \frac{\tan a - \tan b}{1 + \tan a\tan b}$ \\
+	\end{itemize}
 
 \end{itemize}
 
