--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -67,6 +67,32 @@
 		$\tan (a-b) = \frac{\tan a - \tan b}{1 + \tan a\tan b}$ \\
 	\end{itemize}
 
+\section{Fonctions trigonom\'{e}triques inverses}
+Th\'{e}or\`{e}me: Soit \(I\) un intervalle de \(\mathbb{R}, f: I \rightarrow \mathbb{R}\) continue et strictement monotone. \\
+Alors: \begin{enumerate}
+	\item \(J = f(I) = \{f(t)|t \in I\}\) est aussi un intervalle \\
+	\item \(f\) induit une bijection de \(I\) sur \(J\) \\
+	\item L'application r\'{e}ciproque \(g = \tilde{f}^{-1}:J \rightarrow I\) est continue, de strictement m\^{e}me monotonie que \(f\)
+\end{enumerate}
+De plus, si \(f\) d\'{e}rivable sur \(I\), \\
+soit \(x_0 \in I\ et\ y_0 = f(x_0) \in J\). Si \(f'(x_0) \neq 0 \) alors \(g\) est d\'{e}rivable en \(y_0\) et
+\(g'(y_0) = \frac{1}{f'(x_0)} = \frac{1}{f'(g(y_0))}\) \\
+
+\subsection{Arcsin}
+\(Arcsin: [-1,1] \rightarrow [-\frac{\Pi}{2}, \frac{\Pi}{2}]\) \\
+\(\arcsin\) est impaire, continue et strictement croissante \\
+Pour \(y \in ]-1,1[, \arcsin'(y) = \frac{1}{\sqrt{1-y^2}}\) \\
+
+\subsection{Arccos}
+\(Arccos: [-1,1] \rightarrow [0, \Pi]\) \\
+\(\arcsin\) est continue et strictement d\'{e}croissante \\
+Pour \(y \in ]-1,1[, \arccos'(y) = -\frac{1}{\sqrt{1-y^2}}\) \\
+
+\subsection{Arctan}
+\(Arctan: [-\frac{\Pi}{2},\frac{\Pi}{2}] \rightarrow \mathbb{R}\) \\
+\(\arctan\) est impaire continue et strictement croissante \\
+Pour \(y \in \mathbb{R}, \arctan'(y) = \frac{1}{1+y^2}\) \\
+
 \end{itemize}
 
 
