--- a/Logarithme et exponentielle.tex
+++ b/Logarithme et exponentielle.tex
@@ -9,6 +9,7 @@
 \maketitle
 
 \section{Logarithme}
+\emph{Log} est l'application d\'{e}finie telle que: \(\mathbb{R}^*_+ \rightarrow \mathbb{R}\)
 	\begin{itemize}
 	\item $ x,y>0, \ln (xy) = \ln x + \ln y $
 	\item $ \ln 1 = 0 $
@@ -23,16 +24,16 @@
 	\end{itemize}
 
 \section{exponentielle}
-\emph{exp} est l'application r\'{e}ciproque de \emph{Log}
+\emph{exp} est l'application r\'{e}ciproque de \emph{Log} d\'{e}finie telle que: \(\mathbb{R} \rightarrow \mathbb{R}^*_+\)
 	\begin{itemize}
 	\item $ e^{x+y} = e^xe^y $
 	\item $ e^0 = 1 $
 	\item $ e^{-x} = \frac{1}{e^x} $
 	\newline
 
+	\item $ \lim_{x\to 0} \frac{e^x-1}{x} = 1 $
 	\item $ \lim_{x\to\infty} \frac{x}{e^x} = 0 $
 	\item $ \lim_{x\to-\infty} xe^x = 0 $
-	\item $ \lim_{x\to 0} \frac{e^x-1}{x} = 1 $
 	\end{itemize}
 
 \subsection{Propri\'{e}t\'{e}es du $e$}
