--- a/Trigonométrie.tex
+++ b/Trigonométrie.tex
@@ -19,8 +19,8 @@
 		$\cosh$ est paire, $\sinh$ est impaire, $\tanh$ est impaire
 	\item $ \cosh^2 t - \sinh^2 t = 1 $
 	\item $\cosh$ et $\sinh$ sont d\'{e}rivables sur $\mathbb{R}$: \\
-		$\cosh$' $ = \sinh$ \\
-		$\sinh$' $ = \cosh$
+		$\cosh'$ $ = \sinh$ \\
+		$\sinh'$ $ = \cosh$
 	\newline
 	\item Formules: \\
 		$\cosh (a+b) = \cosh a\cosh b + \sinh a\sinh b$ \\
@@ -76,9 +76,9 @@
 
 	\item Formules: \\
 	$\tan (\Pi-t) = -\tan t$ \\
-	$\tan (\frac{\Pi}{2} - t) = \frac{1}{t} $ \\
+	$\tan (\frac{\Pi}{2} - t) = \frac{1}{\tan t} $ \\
 	\newline
-	$\tan$'$ t = \frac{1}{\cos^2 t} = 1 + \tan^2 t$ \\
+	$\tan' t = \frac{1}{\cos^2 t} = 1 + \tan^2 t$ \\
 	$\tan (a+b) = \frac{\tan a + \tan b}{1 - \tan a\tan b}$ \\
 	$\tan (a-b) = \frac{\tan a - \tan b}{1 + \tan a\tan b}$ \\
 \end{itemize}
