--- a/Coefficients binomiaux.tex
+++ b/Coefficients binomiaux.tex
@@ -31,11 +31,11 @@
 	\begin{itemize}
 		\item Soit \(p\) un nombre premier, \(k \in [\![1,p-1]\!]\) alors \(p\) divise \(\binom{p}{k}\) \\
 		\item Propri\'{e}t\'{e}: \(a,b \in \mathbb{Z}\): \\
-			\[(a+b)^p \equiv a^p + b^p [p]\]
-			De fa\c{c}on plus g\'{e}n\'{e}rale, pour \(n \in \mathbb{N}^*, a_1, \hdots, a_n \in \mathbb{Z}\): \\
-			\[(a_1+\hdots+a_n)^p \equiv a_1^p+\hdots+a_n^p [p]\]
-		\item petit th\'{e}or\`{e}me de Fermat (si \(p\) ne divise pas \(n\)): \\
-			\[n^{p-1} \equiv 1[p] \]
+			\[(a+b)^p \equiv a^p + b^p \pmod{p}\]
+			De fa\c{c}on plus g\'en\'erale, pour \(n \in \mathbb{N}^*, a_1, \hdots, a_n \in \mathbb{Z}\): \\
+			\[(a_1+\hdots+a_n)^p \equiv a_1^p+\hdots+a_n^p \pmod{p}\]
+		\item petit th\'eor\`eme de Fermat (si \(p\) ne divise pas \(n\)): \\
+			\[n^{p-1} \equiv 1\pmod{p} \]
 	\end{itemize}
 \end{itemize}
 
@@ -53,7 +53,7 @@
 		\begin{itemize}
 			\item \(p = 0, S_{n,0} = \sum_{k=1}^{n}k^0 = \sum_{k=1}^{n}1 = n\)
 			\item \(p = 1, S_{n,1} = \sum_{k=1}^{n}k^1 = \frac{n(n+1)}{2} \)
-			\item \(p = 2, S_{n,2} = \sum_{k=2}^{n}k^2 = \frac{n(n+1)(2n+1)}{6} \)
+			\item \(p = 2, S_{n,2} = \sum_{k=1}^{n}k^2 = \frac{n(n+1)(2n+1)}{6} \)
 		\end{itemize}
 \end{itemize}
 
