--- a/Bric à Brac.tex
+++ b/Bric à Brac.tex
@@ -24,6 +24,10 @@
 
 \section{Ensembles}
 \begin{itemize}
+	\item $(E \cap F) \subset E \subset (E \cup F)$ \\
+		$(E \cap F) \subset F \subset (E \cup F)$ \\
+		$E \cap \emptyset = \emptyset$ \\
+		$E \cup \emptyset = E$
 	\item Distributivit\'e: \\
 		\(E \cap(F \cup G) = (E \cap F) \cup (E \cap G)\) \\
 		\(E \cup (F \cap G) = (E \cup F) \cap (E \cup G)\)
