--- a/Nombres réels.tex
+++ b/Nombres réels.tex
@@ -10,7 +10,7 @@
 
 \section{Valeur absolue}
 \begin{itemize}
-	\item $|x| \leq x \leq a \Leftrightarrow a$ et $-x \leq a$
+	\item $|x| \leq a \Leftrightarrow x \leq a$ et $-x \leq a$
 	\item $|xy| = |x||y|$
 	\item In\'egalit\'es triangulaires: \\
 		$|x+y| \leq |x| + |y|$ \\
@@ -19,11 +19,16 @@
 \end{itemize}
 
 \section{Intervalles de $\mathbb{R}$}
-Soit $A$ una partie non vide de $\mathbb{R}$. LASSE,
-\begin{enumerate}
-	\item $A$ est un intervalle
-	\item $\forall x,y \in A, x \leq y \Rightarrow [x,y] \subset A$ ($A$ est convexe)
-\end{enumerate}
+\begin{itemize}
+	\item Pour $a \in \mathbb{R}, \epsilon > 0$, \\
+		$|x-a| \leq \epsilon \Leftrightarrow x \in [a - \epsilon, a + \epsilon]$ \\
+		$|x-a| < \epsilon \Leftrightarrow x \in ]a - \epsilon, a + \epsilon[$
+	\item Soit $A$ una partie non vide de $\mathbb{R}$. LASSE,
+		\begin{enumerate}
+			\item $A$ est un intervalle
+			\item $\forall x,y \in A, x \leq y \Rightarrow [x,y] \subset A$ ($A$ est convexe)
+		\end{enumerate}
+\end{itemize}
 
 \section{Partie entière, propri\'et\'e d'Archim\`ede, densit\'e de $\mathbb{Q}$ dans $\mathbb{R}$}
 \begin{itemize}
