--- a/Suites réelles.tex
+++ b/Suites réelles.tex
@@ -28,9 +28,9 @@ Soit $u \in \mathbb{R}^\mathbb{N}$
 D\'efinition: Soit $u \in \mathbb{R}^\mathbb{N}, l \in \mathbb{R}$, on dira que $u$ converge vers $l$ si:
 \[\forall \epsilon > 0, \exists n_0 \in \mathbb{N}, \forall n \geq n_0, |u_n - l| \leq \epsilon\]
 \begin{enumerate}
-	\item Soit $u$ une suite convergente, alors il existe un unique r\'eel $l$ tel que $u$ converge vers $l$
-	\item Soit $u \in \mathbb{R}^\mathbb{N}$ une suite convergente de limite $l \in \mathbb{R}$. Alors toute sous-suite de $u$ converge
-	vers $l$ \\
+	\item Unicit\'e: soit $u$ une suite convergente, alors il existe un unique r\'eel $l$ tel que $u$ converge vers $l$
+	\item Sous-suites: soit $u \in \mathbb{R}^\mathbb{N}$ une suite convergente de limite $l \in \mathbb{R}$. Alors toute sous-suite
+	de $u$ converge vers $l$ \\
 	$\quad$ Rq: s'il existe une sous-suite de $u$ qui diverge, alors $u$ diverge. S'il existent 2 sous-suites de $u$ qui convergent des
 	r\'eels distincts, alors $u$ diverge
 	\item Soit $u \in \mathbb{R}^\mathbb{N}, l \in \mathbb{R}$, \\
