--- a/Topologie dans R.tex
+++ b/Topologie dans R.tex
@@ -1,17 +1,26 @@
 \documentclass[fleqn]{article}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{amsthm}
+\usepackage{verbatim}
 
 \title{Topologie dans $\mathbb{R}$}
 \date{}
+
+\theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
+\theoremstyle{definition} \newtheorem*{adh}{Caract\'erisation s\'equentielle de l'adh\'erence}
+\theoremstyle{definition} \newtheorem*{fermitude}{Caract\'erisation s\'equentielle de la fermitude}
+\theoremstyle{plain} \newtheorem*{theo}{Th\'eor\`eme}
 
 \begin{document}
 \maketitle
 
 \section{Voisinages}
-D\'efinition: Soit $x$ un r\'eel et $A \subset \mathbb{R}$. On dit que $A$ est voisinage de $x$ s'il existe $\epsilon > 0$ tel que:
-\[[x-\epsilon, x+\epsilon] \subset A\]
-Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $x$ dans $\mathbb{R}$
+\begin{defi}
+	Soit $x$ un r\'eel et $A \subset \mathbb{R}$. On dit que $A$ est voisinage de $x$ s'il existe $\epsilon > 0$ tel que:
+	\[[x-\epsilon, x+\epsilon] \subset A\]
+\end{defi}
+Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $x$ dans $\mathbb{R}$ \\
 \begin{itemize}
 	\item $A \in V_\mathbb{R}(x)$ et $A \subset B \Rightarrow B \in V_\mathbb{R}(x)$
 	\item Une r\'eunion quelconque de voisinages de $x$ est encore un voisinage de $x$
@@ -19,12 +28,14 @@ Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $
 \end{itemize}
 
 \section{Ouverts et ferm\'es}
-D\'efinition: Soit $A \subset \mathbb{R}$
-\begin{itemize}
-	\item On dit que $A$ est un ouvert si:
-		\[\forall x, x \in A \Rightarrow A \in V_\mathbb{R}(x)\]
-	\item On dit que $A$ est un ferm\'e lorsque $A^c$ est un ouvert
-\end{itemize}
+\begin{defi}
+	Soit $A \subset \mathbb{R}$
+	\begin{itemize}
+		\item On dit que $A$ est un ouvert si:
+			\[\forall x, x \in A \Rightarrow A \in V_\mathbb{R}(x)\]
+		\item On dit que $A$ est un ferm\'e lorsque $A^c$ est un ouvert \\
+	\end{itemize}
+\end{defi}
 \begin{enumerate}
 	\item Une r\'eunion quelconque d'ouverts est un ouvert
 	\item Une intersection finie d'ouverts est un ouvert
@@ -33,11 +44,13 @@ D\'efinition: Soit $A \subset \mathbb{R}$
 \end{enumerate}
 
 \section{Adh\'erence, int\'erieur}
-D\'efinition: Soit $A \subset \mathbb{R}$
-\begin{itemize}
-	\item $x \in \mathbb{R}$ est int\'erieur \`a $A$ si $A$ est voisinage de $x$
-	\item $x \in \mathbb{R}$ est un point adh\'erent \`a $A$ si pour tout voisinage $V$ de $x$, $V \cap A \neq \emptyset$
-\end{itemize}
+\begin{defi}
+	Soit $A \subset \mathbb{R}$
+	\begin{enumerate}
+		\item $x \in \mathbb{R}$ est int\'erieur \`a $A$ si $A$ est voisinage de $x$
+		\item $x \in \mathbb{R}$ est un point adh\'erent \`a $A$ si pour tout voisinage $V$ de $x$, $V \cap A \neq \emptyset$ \\
+	\end{enumerate}
+\end{defi}
 \begin{itemize}
 	\item Adh, int d'intervalles
 		\begin{align*}
@@ -51,18 +64,21 @@ D\'efinition: Soit $A \subset \mathbb{R}$
 					   &= Adh([a,b]) = [a,b]
 		\end{align*}
 	\item Soit $A$ une partie major\'ee de $\mathbb{R}$, alors sup $A$ est adh\'erent \`a $A$
-	\item Caract\'erisation s\'equentielle de l'ah\'erence: \\
-		Soit $A \subset \mathbb{R} (A \neq \emptyset), x \in \mathbb{R}$
-		\[x \in Adh(A) \Leftrightarrow \text{il existe une suite} (a_n)_{n \in \mathbb{N}} \text{ de points de A qui converge vers } x\]
-	\item Caract\'erisation s\'equentielle de la fermitude: \\ 
-		Soit $A \subset \mathbb{R}$
-		\[A \text{ferm\'ee} \Leftrightarrow \text{Pour toute suite cv. d'\'el\'e de } A (a_n), \text{on a } lim_{n \to \infty} a_n \in A\]
-	\item Th\'or\`eme: Boel-Lebesque: \\
-		Soit $A \subset \mathbb{R} (A \neq \emptyset)$, LASSE:
-		\begin{enumerate}
-			\item $A$ est ferm\'ee born\'ee (compacte)
-			\item Pour toute suite $(a_n)$ d'\'el\'e. de $a$, il existe une sous-suite de $(a_n)$ qui cv. vers un \'el\'e. de $A$
-		\end{enumerate}
 \end{itemize}
+\begin{adh}
+	Soit $A \subset \mathbb{R} (A \neq \emptyset), x \in \mathbb{R}$
+	\[x \in Adh(A) \Leftrightarrow \text{il existe une suite} (a_n)_{n \in \mathbb{N}} \text{ de points de A qui converge vers } x\]
+\end{adh}
+\begin{fermitude}
+	Soit $A \subset \mathbb{R}$
+	\[A \text{ ferm\'ee} \Leftrightarrow \text{Pour toute suite cv. d'\'el\'e de } A\ (a_n), \text{on a } lim_{n \to \infty} a_n \in A\]
+\end{fermitude}
+\begin{theo}
+	Boel-Lebesque: soit $A \subset \mathbb{R} (A \neq \emptyset)$, LASSE:
+	\begin{enumerate}
+		\item $A$ est ferm\'ee born\'ee (compacte)
+		\item Pour toute suite $(a_n)$ d'\'el\'e. de $a$, il existe une sous-suite de $(a_n)$ qui cv. vers un \'el\'e. de $A$
+	\end{enumerate}
+\end{theo}
 
 \end{document}
