--- a/Topologie dans R.tex
+++ b/Topologie dans R.tex
@@ -8,9 +8,9 @@
 \date{}
 
 \theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
+\theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
 \theoremstyle{definition} \newtheorem*{adh}{Caract\'erisation s\'equentielle de l'adh\'erence}
 \theoremstyle{definition} \newtheorem*{fermitude}{Caract\'erisation s\'equentielle de la fermitude}
-\theoremstyle{plain} \newtheorem*{theo}{Th\'eor\`eme}
 
 \begin{document}
 \maketitle
@@ -63,7 +63,10 @@ Pour $x \in \mathbb{R}$ on note $V_\mathbb{R}(x)$ l'ensemble des voisinages de $
 					   &= Adh([a,b[) \\
 					   &= Adh([a,b]) = [a,b]
 		\end{align*}
-	\item Soit $A$ une partie major\'ee de $\mathbb{R}$, alors sup $A$ est adh\'erent \`a $A$
+	\item Soit $A$ une partie major\'ee de $\mathbb{R}$, alors sup $A$ est adh\'erent \`a $A$ (analogue pour $inf\ A$)
+	\item Soit $A \subset \mathbb{R}$ \\
+		$A$ est ferm\'e $\Leftrightarrow A = Adh(A)$ \\
+		$A$ est ouvert $\Leftrightarrow A = Int(A)$
 \end{itemize}
 \begin{adh}
 	Soit $A \subset \mathbb{R} (A \neq \emptyset), x \in \mathbb{R}$
