--- a/Coefficients binomiaux.tex
+++ b/Coefficients binomiaux.tex
@@ -1,18 +1,24 @@
 \documentclass[fleqn]{article}
 \usepackage{amssymb}
 \usepackage{amsmath}
+\usepackage{amsthm}
 
 \title{Coefficients binomiaux}
 \date{}
+
+\theoremstyle{definition} \newtheorem*{defi}{D\'efinition}
+\theoremstyle{definition} \newtheorem*{theo}{Th\'eor\`eme}
 
 \begin{document}
 \maketitle
 
 \section{Coefficient binomial}
+\begin{defi}
+	Pour \(n \in \mathbb{N}\ et\ k \in [\![0,n]\!]\): \\
+	\[ \binom{n}{k} = \frac{n!}{k!(n-k)!} \]
+\end{defi}
 \begin{itemize}
-	\item D\'{e}finition: pour \(n \in \mathbb{N}\ et\ k \in [\![0,n]\!]\): \\
-		\[ \binom{n}{k} = \frac{n!}{k!(n-k)!} \]
-		Par convention, si \(k>n, \binom{n}{k} = 0\) \\
+		\item Par convention, si \(k>n, \binom{n}{k} = 0\) \\
 		Pour tout \(n \in \mathbb{N}:\) \\
 		\(\binom{n}{0} = 1 = \binom{n}{n}\) \\
 		\(\binom{n}{1} = n = \binom{n}{n-1}\) \\
